<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context="ru.ashhs.cardsdisplayingtask.presentation.contacts.ContactsFragment">

        <ImageView
            android:id="@+id/contactsImage"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/contacts_image_description"
            android:src="@drawable/mushrooms"/>

        <TextView
            android:id="@+id/contactsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contacts_name"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/contactsCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contacts_city"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/contactsPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contacts_phone"/>

        <TextView
            android:id="@+id/contactsEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contacts_email"/>

        <TextView
            android:id="@+id/contactsWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contacts_website"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
