<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_vertical_margin"
    android:layout_marginLeft="@dimen/card_horizontal_margin"
    android:layout_marginRight="@dimen/card_horizontal_margin"
    android:layout_marginTop="@dimen/card_vertical_margin"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/card_padding"
        android:paddingRight="@dimen/card_padding"
        android:paddingTop="@dimen/card_padding">

        <TextView
            android:id="@+id/tasksTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards_tasks_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tasks"/>

        <View
            android:id="@+id/divider_tasks_header"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tasksTitleTextView"/>

        <ImageView
            android:id="@+id/taskCompletedImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/cards_tasks_completed_image_description"
            android:tint="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/taskTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/taskTitleTextView"
            app:srcCompat="@drawable/ic_completed"/>

        <ImageView
            android:id="@+id/taskUncompletedImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/cards_tasks_uncompleted_image_description"
            android:tint="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/taskTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/taskTitleTextView"
            app:srcCompat="@drawable/ic_uncompleted"/>

        <TextView
            android:id="@+id/taskTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/taskCompletedImage"
            app:layout_constraintTop_toBottomOf="@+id/divider_tasks_header"
            tools:text="quis ut nam facilis et officia qui"/>

        <Button
            android:id="@+id/tasksNextRandomButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cards_tasks_next_random_button_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleTextView"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>